Alters right hand padding to prevent overlap of indicator.

--- a/scss/_native.scss
+++ b/scss/_native.scss
@@ -9,7 +9,7 @@ select.xq-select {
   display: inline-flex;
   align-items: center;
   margin: 0;
-  padding: 0 $custom-select-padding-x;
+  padding: 0 $custom-select-padding-x*2 0 $custom-select-padding-x;
   height: $custom-select-height;
   // Color & Arrow
   color: $custom-select-color;
